# easy_check

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  models.py  pyproject.toml  schemes.py  settings.py  utils.py
handlers/: auth.py  notes.py
tests/: conftest.py  test_auth.py  test_notes.py
